--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 body {
   
 }
-
+/* ========================================Background Css================================= */
 #home{
     background: 
     /* top, transparent red, faked with gradient */ linear-gradient(
@@ -67,10 +67,12 @@ body {
     rgba(221, 201, 201, 0.45),
     rgba(0, 0, 0, 0.45)
   ),
-  /* bottom, image */ url(/images/wallpaperrrrrr2.jpg);
+  /* bottom, image */ url(/images/wallpapperrrrrr3.jpg);
 background-size :cover;
 background-attachment: fixed;
 }
+
+/* ========================================Background Css End================================= */
 
 .home-con {
   margin-top: 150px;
@@ -105,12 +107,41 @@ background-attachment: fixed;
   text-shadow: 2px 2px red;
 }
 
+
+/* ========================================Web Developmet Animation================================= */
 #animation{
-  font-size: 30px;
-  color: rgb(0, 0, 0);
+  font-size: 39px;
+  color: rgb(88, 60, 60);
   text-shadow: 2px 2px red;
 }
 
+#animation2{
+  font-size: 64px;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px red;
+}
+
+#animation3{
+  font-size: 58px;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px red;
+}
+.animation4{
+  font-size: 58px;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px red;
+}
+/* ========================================Web Developmet Animation================================= */
+
+#buttonglow{
+  width: 70px;
+  height: 50px;
+  background-color: #fff;
+
+  box-shadow: 20px 30px 60px 40px rgb(178, 60, 229);
+}
+
+/* ========================================Contact================================= */
 .input,
 .msg .area{
   width: 100%;
@@ -160,6 +191,10 @@ background-attachment: fixed;
   font-family: 'roboto';
 }
 
+
+/* ========================================Contact End================================= */
+
+/* ==================Styling for Githib links=================================== */
 .linkz{
  
   align-content: space-between;
@@ -168,6 +203,186 @@ background-attachment: fixed;
   
 }
 
+
+
+@media all and (max-width:768px) {
+.linkz{
+  font-size: 20px;
+}
+
+}
+@media all and (max-width:567px) {
+.linkz{
+  font-size: 15px;
+}
+
+}
+
+/* ==================Styling for Githib links End=================================== */
+
+
+
 .projects{
   margin-top: 200px;
 }
+
+.Aboot-text {
+  font-size: 25px;
+}
+
+/* ======================Testimonials============================= */
+
+.container-animation {
+  position: relative;
+  width: 30%;
+}
+
+.testimonialimgs{
+  border-radius: 15px;
+  display: block;
+  width: 100;
+  height: auto;
+  
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: rgb(238, 211, 211);
+  opacity: 80%;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.container-animation:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.testimonialtxt{
+  white-space: nowrap; 
+  color: rgb(24, 109, 255);
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+#testimonialHeader{
+  
+}
+
+@media all and (max-width:768px) {
+  #testimonialHeader{
+    font-size: 50px;
+  }
+  
+  }
+  @media all and (max-width:567px) {
+   #testimonialHeader{
+    font-size: 25px;
+  }
+  
+  }
+
+  /* ======================Testimonials End============================= */
+  
+
+  #Projectsheader{
+
+  }
+
+  @media all and (max-width:768px) {
+    #Projectsheader{
+      font-size: 50px;
+    }
+    
+    }
+    @media all and (max-width:567px) {
+     #Projectsheader{
+      font-size: 25px;
+    }
+    
+    }
+
+
+    #ResumeHeader{
+
+    }
+
+    @media all and (max-width:768px) {
+      #Projectsheader{
+        font-size: 50px;
+      }
+      
+      }
+      @media all and (max-width:567px) {
+       #Projectsheader{
+        font-size: 25px;
+      }
+      
+      }
+
+      #Navbar2{
+
+      }
+      @media all and (max-width:768px) {
+        #Navbar2{
+          width: 11px;
+          height: 15px;
+          font-size: 30px ;
+        }
+        
+        }
+        @media all and (max-width:567px) {
+          #Navbar2{
+          width: 34px;
+          height: 25px;
+          font-size: 25px ;
+        }
+        
+        }
+
+        .line-between{
+          border-left: 3px solid black;
+          padding-left: 20px;
+          position: relative;
+        }
+
+        .line-between::before{
+          position: absolute;
+          left: -10px;
+          top: 0;
+          display: block;
+          content: "";
+          width: 20px;
+          height: 20px;
+          border: 3px solid black;
+          border-radius: 50%;
+          background-color: #7c24cd;
+          /* background-color: rgb(248, 249, 250); */
+        }
+        .line-between::before{
+          position: absolute;
+          left: -10px;
+          top: 50;
+          display: block;
+          content: "";
+          width: 20px;
+          height: 20px;
+          border: 3px solid black;
+          border-radius: 50%;
+          background-color: #7c24cd;
+          /* background-color: rgb(248, 249, 250); */
+        }
+
+        #joelsimg{
+          height: 52vh;
+        }
